--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-
-<html>
-  <title>
-    First website
-  </title>
-  
-  <body>
-    <h1>This is my first github pages</h1>
-  </body>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF.8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title> 
   <style>
-    body {
-      backgorund - color:green;
-      color : #fff;
-      text - align:center;
-    }
-  </style> 
-  
+  <body> {
+  color: white;
+  backgorund: green;  
+  <style/>
+</head>
+<body>
+    
+  <h1>Mywebsite<h1>
+    
+</body>
 </html>
